--- a/bikin-heboh-mahjong-ways-di-kecoaslot-viral-karena-perkalian-brutal-se-asia.html
+++ b/bikin-heboh-mahjong-ways-di-kecoaslot-viral-karena-perkalian-brutal-se-asia.html
@@ -786,10 +786,10 @@ body {
                     </div>
                   </div>
                   <div class="top-links-item grey" id="anonLogin">
-                    <a class="grey" href="https://jali.me/mahjong-gacor" data-spm-click="gostr=/lzdpub.header.tbar;locaid=d5">LOGIN</a>
+                    <a class="grey" href="https://heylink.me/mahjong-gacor-ks" data-spm-click="gostr=/lzdpub.header.tbar;locaid=d5">LOGIN</a>
                   </div>
                   <div class="top-links-item grey" id="anonSignup">
-                    <a class="grey" href="https://jali.me/mahjong-gacor" data-spm-click="gostr=/lzdpub.header.tbar;locaid=d6">DAFTAR</a>
+                    <a class="grey" href="https://heylink.me/mahjong-gacor-ks" data-spm-click="gostr=/lzdpub.header.tbar;locaid=d6">DAFTAR</a>
                   </div>
                   <div class="top-links-item top-links-item-hidden" id="topActionUserAccont" data-spm-click="gostr=/lzdpub.header.tbar;locaid=d7">
                     <span id="myAccountTrigger" class="grey"></span>
@@ -1381,10 +1381,10 @@ body {
                     <img width='1280' height='720' layout='responsive' class="pdp-mod-common-image gallery-preview-panel__image" alt="KECOASLOT" src="https://i.postimg.cc/t4LgZH0q/photo-2024-12-11-08-50-34-4.jpg" />
                   </div>
                   <div class="btn-gacor">
-                    <a href="https://jali.me/mahjong-gacor" rel="nofollow noreferrer" class="register">
+                    <a href="https://heylink.me/mahjong-gacor-ks" rel="nofollow noreferrer" class="register">
                       DAFTAR
                     </a>
-                    <a href="https://jali.me/mahjong-gacor" rel="nofollow noreferrer" class="login">
+                    <a href="https://heylink.me/mahjong-gacor-ks" rel="nofollow noreferrer" class="login">
                       LOGIN
                     </a>
                   </div>
@@ -1990,11 +1990,11 @@ body {
 </style>
 
     <div class="fixed-footer">
-      <a href="https://jali.me/mahjong-gacor" rel="nofollow noopener" target="_blank"><img layout="intrinsic" height="20px" width="20px" src="https://ampkecoaslot.com/images/favicon.png" alt="PROMO">Bonus</a>
-      <a href="https://jali.me/mahjong-gacor" rel="nofollow noopener" target="_blank"><img layout="intrinsic" height="20px" width="20px" src="https://ampkecoaslot.com/images/favicon.png" alt="LOGIN">Login</a>
-      <a href="https://jali.me/mahjong-gacor" rel="nofollow noopener" target="_blank" class="tada"><img layout="intrinsic" height="20px" width="20px" src="https://ampkecoaslot.com/images/favicon.png" alt="DAFTAR">Daftar</a>
-      <a href="https://jali.me/mahjong-gacor" rel="nofollow noopener" target="_blank"><img layout="intrinsic" height="20px" width="20px" src="https://ampkecoaslot.com/images/favicon.png" alt="LINK">Link</a>
-      <a href="https://jali.me/mahjong-gacor" rel="nofollow noopener" target="_blank" class="js_live_chat_link live-chat-link"><img class="live-chat-icon" layout="intrinsic" height="20px" width="20px" src="https://ampkecoaslot.com/images/favicon.png" alt="CHAT"> Live Chat </a>
+      <a href="https://heylink.me/mahjong-gacor-ks" rel="nofollow noopener" target="_blank"><img layout="intrinsic" height="20px" width="20px" src="https://ampkecoaslot.com/images/favicon.png" alt="PROMO">Bonus</a>
+      <a href="https://heylink.me/mahjong-gacor-ks" rel="nofollow noopener" target="_blank"><img layout="intrinsic" height="20px" width="20px" src="https://ampkecoaslot.com/images/favicon.png" alt="LOGIN">Login</a>
+      <a href="https://heylink.me/mahjong-gacor-ks" rel="nofollow noopener" target="_blank" class="tada"><img layout="intrinsic" height="20px" width="20px" src="https://ampkecoaslot.com/images/favicon.png" alt="DAFTAR">Daftar</a>
+      <a href="https://heylink.me/mahjong-gacor-ks" rel="nofollow noopener" target="_blank"><img layout="intrinsic" height="20px" width="20px" src="https://ampkecoaslot.com/images/favicon.png" alt="LINK">Link</a>
+      <a href="https://heylink.me/mahjong-gacor-ks" rel="nofollow noopener" target="_blank" class="js_live_chat_link live-chat-link"><img class="live-chat-icon" layout="intrinsic" height="20px" width="20px" src="https://ampkecoaslot.com/images/favicon.png" alt="CHAT"> Live Chat </a>
     </div>
     <script>
       (function() {
